--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap");
 
 /* other css file imports */
-/* @import url("sections/header.css");
-@import url("sections/hero.css");
+@import url("sections/header.css");
+/* @import url("sections/hero.css");
 @import url("sections/about.css");
 @import url("sections/popular.css");
 @import url("sections/trending.css");
@@ -14,6 +14,7 @@
 :root {
   --playfair-display: "Playfair Display", serif;
   --plus-jakarta-sans: "Plus Jakarta Sans", sans-serif;
+
 
   --primary-color: #b1454a;
   --secondary-color: #121212;
